# raylib-next-gamejam

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ProjectOptions.cmake
libs/: CMakeLists.txt
libs/raylib/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  Makefile.Android  constants.h  end_scene.cpp  game.cpp  game.h  level1.h  level2.h  level3.h  level4.h  level5.h  main.cpp  main_scene.cpp  raylib_game.c  raylib_game.cpp  start_scene.cpp  types.h
src/resources/: .gitignore
